@@ -1,1 +1,0 @@
-This package contains a Flickr plugin for the Thoth blog engine.
