@@ -1,4 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2011/11/08 15:37:35 taca Exp $
-${GEM_HOME}/cache/thoth_flickr-${PKGVERSION}.gem
-${GEM_LIBDIR}/plugin/thoth_flickr.rb
-${GEM_HOME}/specifications/thoth_flickr-${PKGVERSION}.gemspec
