@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.3613 2017/09/05 06:00:47 wiz Exp $
+$NetBSD: CHANGES-2017,v 1.3614 2017/09/05 06:03:23 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -5078,3 +5078,4 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated graphics/gdk-pixbuf2-xlib to 2.36.9 [ryoon 2017-09-04]
 	Updated graphics/netpbm to 10.79.04 [wiz 2017-09-04]
 	Removed inputmethod/scim-tegaki [wiz 2017-09-05]
+	Removed www/thoth-flickr [wiz 2017-09-05]
